feat(update): broken links docs

--- a/docs/1.0/components/alerts.html
+++ b/docs/1.0/components/alerts.html
@@ -112,22 +112,6 @@ Alerts - Now UI Kit by Creative Tim
 <!-- CSS Just for demo purpose, don't include it in your project -->
 <link href="../../../assets/demo/demo.css" rel="stylesheet" />
 
-
-<!-- Visual Inspector Plugin -->
-<script type="text/javascript">
-  (function (g) {
-    var s = document.createElement('script'),
-    t = document.getElementsByTagName('script')[0];
-    s.async = true;
-    s.src = g + '?v=' + (new Date()).getTime();
-    s.charset = 'UTF-8';
-    s.setAttribute('crossorigin', '*');
-    t.parentNode.insertBefore(s, t);
-    })('https://www.canvasflip.com/plugins/vi/vi.min.js');
-</script>
-
-
-
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -187,6 +171,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="navbar-nav-scroll ml-md-auto ">
     <ul class="navbar-nav bd-navbar-nav flex-row">
+      
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.creative-tim.com/product/now-ui-kit-pro?ref=nuk-free-upgrade-pro" target="
+        "><i class="now-ui-icons arrows-1_cloud-upload-94"></i> Upgrade to PRO</a>
+      </li>
+      
+
         <li class="nav-item">
           <a class="nav-link active" href="https://github.com/creativetimofficial/now-ui-kit"><i class="now-ui-icons objects_diamond"></i> Give us a star</a>
         </li>
@@ -286,23 +277,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
                   <a href="../../../docs/1.0/getting-started/file-structure.html">
                     File Structure
-                  </a>
-              
-
-              
-            </li>
-          
-        
-          
-          
-
-          
-
-          
-            <li class="">
-              
-                  <a href="../../../docs/1.0/getting-started/visual-inspector.html">
-                    Visual Inspector
                   </a>
               
 
@@ -943,7 +917,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <ul>
   <li>Be sure you’ve loaded the alert plugin, or the compiled Bootstrap JavaScript.</li>
-  <li>If you’re building our JavaScript from source, it <a href="/docs/1.0/getting-started/javascript/#util">requires <code class="highlighter-rouge">util.js</code></a>. The compiled version includes this.</li>
+  <li>If you’re building our JavaScript from source, it <a href="https://getbootstrap.com/docs/4.4/getting-started/javascript/" target="_blank" rel="nofollow">requires <code class="highlighter-rouge">util.js</code></a>. The compiled version includes this.</li>
   <li>Add a dismiss button and the <code class="highlighter-rouge">.alert-dismissible</code> class, which adds extra padding to the right of the alert and positions the <code class="highlighter-rouge">.close</code> button.</li>
   <li>On the dismiss button, add the <code class="highlighter-rouge">data-dismiss="alert"</code> attribute, which triggers the JavaScript functionality. Be sure to use the <code class="highlighter-rouge">&lt;button&gt;</code> element with it for proper behavior across all devices.</li>
   <li>To animate alerts when dismissing them, be sure to add the <code class="highlighter-rouge">.fade</code> and <code class="highlighter-rouge">.show</code> classes.</li>
@@ -980,7 +954,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.0/components/alerts/">Bootstrap Documentation</a></p>
+<p>If you want to see more examples and properties please check the official <a href="https://getbootstrap.com/docs/4.4/components/alerts/" target="_blank" rel="nofollow">Bootstrap Documentation</a></p>
 
         </main>
       </div>
