--- a/docs/1.0/components/collapse.html
+++ b/docs/1.0/components/collapse.html
@@ -112,22 +112,6 @@ Collapse - Now UI Kit by Creative Tim
 <!-- CSS Just for demo purpose, don't include it in your project -->
 <link href="../../../assets/demo/demo.css" rel="stylesheet" />
 
-
-<!-- Visual Inspector Plugin -->
-<script type="text/javascript">
-  (function (g) {
-    var s = document.createElement('script'),
-    t = document.getElementsByTagName('script')[0];
-    s.async = true;
-    s.src = g + '?v=' + (new Date()).getTime();
-    s.charset = 'UTF-8';
-    s.setAttribute('crossorigin', '*');
-    t.parentNode.insertBefore(s, t);
-    })('https://www.canvasflip.com/plugins/vi/vi.min.js');
-</script>
-
-
-
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -187,6 +171,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="navbar-nav-scroll ml-md-auto ">
     <ul class="navbar-nav bd-navbar-nav flex-row">
+      
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.creative-tim.com/product/now-ui-kit-pro?ref=nuk-free-upgrade-pro" target="
+        "><i class="now-ui-icons arrows-1_cloud-upload-94"></i> Upgrade to PRO</a>
+      </li>
+      
+
         <li class="nav-item">
           <a class="nav-link active" href="https://github.com/creativetimofficial/now-ui-kit"><i class="now-ui-icons objects_diamond"></i> Give us a star</a>
         </li>
@@ -286,23 +277,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
                   <a href="../../../docs/1.0/getting-started/file-structure.html">
                     File Structure
-                  </a>
-              
-
-              
-            </li>
-          
-        
-          
-          
-
-          
-
-          
-            <li class="">
-              
-                  <a href="../../../docs/1.0/getting-started/visual-inspector.html">
-                    Visual Inspector
                   </a>
               
 
@@ -859,7 +833,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
           <h1 class="bd-title" id="content">Collapse</h1>
           <p class="bd-lead">Toggle the visibility of content across your project with a few classes and our JavaScript plugins.</p>
-          <h2 id="example">Example</h2>
+          
+<h2 id="example">Example</h2>
 
 <p>Click the buttons below to show and hide another element via class changes:</p>
 
@@ -902,7 +877,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <h2 id="accordion-example">Accordion example</h2>
 
-<p>Using the <a href="/docs/1.0/components/card/">card</a> component, you can extend the default collapse behavior to create an accordion.</p>
+<p>Using the <a href="../../../docs/1.0/components/card.html">card</a> component, you can extend the default collapse behavior to create an accordion.</p>
 
 <div class="bd-example" data-example-id="">
 <div id="accordion" role="tablist" aria-multiselectable="true" class="card-collapse">
@@ -1046,7 +1021,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.0/components/collapse/">Bootstrap Documentation</a></p>
+<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.4/components/collapse/" target="_blank" rel="nofollow">Bootstrap Documentation</a></p>
 
         </main>
       </div>
