--- a/docs/1.0/components/carousel.html
+++ b/docs/1.0/components/carousel.html
@@ -112,22 +112,6 @@ Carousel - Now UI Kit by Creative Tim
 <!-- CSS Just for demo purpose, don't include it in your project -->
 <link href="../../../assets/demo/demo.css" rel="stylesheet" />
 
-
-<!-- Visual Inspector Plugin -->
-<script type="text/javascript">
-  (function (g) {
-    var s = document.createElement('script'),
-    t = document.getElementsByTagName('script')[0];
-    s.async = true;
-    s.src = g + '?v=' + (new Date()).getTime();
-    s.charset = 'UTF-8';
-    s.setAttribute('crossorigin', '*');
-    t.parentNode.insertBefore(s, t);
-    })('https://www.canvasflip.com/plugins/vi/vi.min.js');
-</script>
-
-
-
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -187,6 +171,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="navbar-nav-scroll ml-md-auto ">
     <ul class="navbar-nav bd-navbar-nav flex-row">
+      
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.creative-tim.com/product/now-ui-kit-pro?ref=nuk-free-upgrade-pro" target="
+        "><i class="now-ui-icons arrows-1_cloud-upload-94"></i> Upgrade to PRO</a>
+      </li>
+      
+
         <li class="nav-item">
           <a class="nav-link active" href="https://github.com/creativetimofficial/now-ui-kit"><i class="now-ui-icons objects_diamond"></i> Give us a star</a>
         </li>
@@ -286,23 +277,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
                   <a href="../../../docs/1.0/getting-started/file-structure.html">
                     File Structure
-                  </a>
-              
-
-              
-            </li>
-          
-        
-          
-          
-
-          
-
-          
-            <li class="">
-              
-                  <a href="../../../docs/1.0/getting-started/visual-inspector.html">
-                    Visual Inspector
                   </a>
               
 
@@ -871,11 +845,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
           <h1 class="bd-title" id="content">Carousel</h1>
           <p class="bd-lead">A slideshow component for cycling through elements—images or slides of text—like a carousel.</p>
-          <h2 id="how-it-works">How it works</h2>
+          
+<h2 id="how-it-works">How it works</h2>
 
 <p>The carousel is a slideshow for cycling through a series of content, built with CSS 3D transforms and a bit of JavaScript. It works with a series of images, text, or custom markup. It also includes support for previous/next controls and indicators.</p>
 
-<p>In browsers where the <a href="https://www.w3.org/TR/page-visibility/">Page Visibility API</a> is supported, the carousel will avoid sliding when the webpage is not visible to the user (such as when the browser tab is inactive, the browser window is minimized, etc.).</p>
+<p>In browsers where the <a href="https://www.w3.org/TR/page-visibility/" target="_blank" rel="nofollow">Page Visibility API</a> is supported, the carousel will avoid sliding when the webpage is not visible to the user (such as when the browser tab is inactive, the browser window is minimized, etc.).</p>
 
 <p>Please be aware that nested carousels are not supported, and carousels are generally not compliant with accessibility standards.</p>
 
@@ -899,19 +874,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item">
-      <img class="d-block" src="/assets/img/bg1.jpg" alt="First slide" />
+      <img class="d-block" src="../../../assets/img/bg1.jpg" alt="First slide" />
       <div class="carousel-caption d-none d-md-block">
         <h5>Nature, United States</h5>
       </div>
     </div>
     <div class="carousel-item active">
-      <img class="d-block" src="/assets/img/bg3.jpg" alt="Second slide" />
+      <img class="d-block" src="../../../assets/img/bg3.jpg" alt="Second slide" />
       <div class="carousel-caption d-none d-md-block">
         <h5>Somewhere Beyond, United States</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block" src="/assets/img/bg4.jpg" alt="Third slide" />
+      <img class="d-block" src="../../../assets/img/bg4.jpg" alt="Third slide" />
       <div class="carousel-caption d-none d-md-block">
         <h5>Yellowstone National Park, United States</h5>
       </div>
@@ -933,19 +908,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="nt">&lt;/ol&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-inner"</span> <span class="na">role=</span><span class="s">"listbox"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-item"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"/assets/img/bg1.jpg"</span> <span class="na">alt=</span><span class="s">"First slide"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"../../../assets/img/bg1.jpg"</span> <span class="na">alt=</span><span class="s">"First slide"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-caption d-none d-md-block"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;h5&gt;</span>Nature, United States<span class="nt">&lt;/h5&gt;</span>
       <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-item active"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"/assets/img/bg3.jpg"</span> <span class="na">alt=</span><span class="s">"Second slide"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"../../../assets/img/bg3.jpg"</span> <span class="na">alt=</span><span class="s">"Second slide"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-caption d-none d-md-block"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;h5&gt;</span>Somewhere Beyond, United States<span class="nt">&lt;/h5&gt;</span>
       <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-item"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"/assets/img/bg4.jpg"</span> <span class="na">alt=</span><span class="s">"Third slide"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">class=</span><span class="s">"d-block"</span> <span class="na">src=</span><span class="s">"../../../assets/img/bg4.jpg"</span> <span class="na">alt=</span><span class="s">"Third slide"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"carousel-caption d-none d-md-block"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;h5&gt;</span>Yellowstone National Park, United States<span class="nt">&lt;/h5&gt;</span>
       <span class="nt">&lt;/div&gt;</span>
@@ -959,7 +934,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.0/components/carousel/">Bootstrap Documentation</a></p>
+<p>If you want to see more examples and properties please check the official <a href="https://getbootstrap.com/docs/4.4/components/carousel/" target="_blank" rel="nofollow">Bootstrap Documentation</a></p>
 
         </main>
       </div>
