feat(update): broken links docs

--- a/docs/1.0/components/dropdowns.html
+++ b/docs/1.0/components/dropdowns.html
@@ -843,9 +843,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p>Dropdowns are toggleable, contextual overlays for displaying lists of links and more. They’re made interactive with the included Bootstrap dropdown JavaScript plugin. They’re toggled by clicking, not by hovering; this is <a href="http://markdotto.com/2012/02/27/bootstrap-explained-dropdowns/">an intentional design decision.</a></p>
 
-<p>Dropdowns are built on a third party library, <a href="https://popper.js.org/">Popper.js</a>, which provides dynamic positioning and viewport detection. Be sure to include <a href="">popper.min.js</a> before Bootstrap’s JavaScript or use <code class="highlighter-rouge">bootstrap.bundle.min.js</code> / <code class="highlighter-rouge">bootstrap.bundle.js</code> which contains Popper.js. Popper.js isn’t used to position dropdowns in navbars though as dynamic positioning isn’t required.</p>
+<p>Dropdowns are built on a third party library, <a href="https://popper.js.org/" target="_blank" rel="nofollow">Popper.js</a>, which provides dynamic positioning and viewport detection. Be sure to include <a href="https://popper.js.org/" target="_blank" rel="nofollow">popper.min.js</a> before Bootstrap’s JavaScript or use <code class="highlighter-rouge">bootstrap.bundle.min.js</code> / <code class="highlighter-rouge">bootstrap.bundle.js</code> which contains Popper.js. Popper.js isn’t used to position dropdowns in navbars though as dynamic positioning isn’t required.</p>
 
-<p>If you’re building our JavaScript from source, it <a href="/docs/1.0/getting-started/javascript/#util">requires <code class="highlighter-rouge">util.js</code></a>.</p>
+<p>If you’re building our JavaScript from source, it <a href="https://getbootstrap.com/docs/4.4/getting-started/javascript/#util" target="_blank" rel="nofollow">requires <code class="highlighter-rouge">util.js</code></a>.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -1141,7 +1141,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></figure>
 
-<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.0/components/dropdowns/">Bootstrap Documentation</a></p>
+<p>If you want to see more examples and properties please check the official <a href="http://getbootstrap.com/docs/4.4/components/dropdowns/">Bootstrap Documentation</a></p>
 
         </main>
       </div>
