--- a/docs/1.0/components/navbar.html
+++ b/docs/1.0/components/navbar.html
@@ -846,7 +846,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
           <h1 class="bd-title" id="content">Navbar</h1>
           <p class="bd-lead">Documentation and examples for Bootstrap's powerful, responsive navigation header, the navbar. Includes support for branding, navigation, and more, including support for our collapse plugin.</p>
-          <h2 id="how-it-works">How it works</h2>
+          
+<h2 id="how-it-works">How it works</h2>
 
 <p>Here’s what you need to know before getting started with the navbar:</p>
 
@@ -1111,7 +1112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p>Theming the navbar has never been easier thanks to the combination of theming classes and <code class="highlighter-rouge">background-color</code> utilities. Choose from <code class="highlighter-rouge">.navbar-light</code> for use with light background colors, or <code class="highlighter-rouge">.navbar-dark</code> for dark background colors. Then, customize with <code class="highlighter-rouge">.bg-*</code> utilities.</p>
 
-<div class="bd-example" style="background:url('/assets/img/project14.jpg'); background-size:cover;">
+<div class="bd-example" style="background:url('../../../assets/img/project14.jpg'); background-size:cover;">
 
   <nav class="navbar navbar-expand-lg bg-primary">
     <div class="container">
@@ -1374,7 +1375,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <h2 id="placement">Placement</h2>
 
-<p>Use our <a href="/docs/1.0/utilities/position/">position utilities</a> to place navbars in non-static positions. Choose from fixed to the top, fixed to the bottom, or stickied to the top (scrolls with the page until it reaches the top, then stays there). Fixed navbars use <code class="highlighter-rouge">position: fixed</code>, meaning they’re pulled from the normal flow of the DOM and may require custom CSS (e.g., <code class="highlighter-rouge">padding-top</code> on the <code class="highlighter-rouge">&lt;body&gt;</code>) to prevent overlap with other elements.</p>
+<p>Use our <a href="https://getbootstrap.com/docs/4.4/utilities/position/" target="_blank" rel="nofollow">position utilities</a> to place navbars in non-static positions. Choose from fixed to the top, fixed to the bottom, or stickied to the top (scrolls with the page until it reaches the top, then stays there). Fixed navbars use <code class="highlighter-rouge">position: fixed</code>, meaning they’re pulled from the normal flow of the DOM and may require custom CSS (e.g., <code class="highlighter-rouge">padding-top</code> on the <code class="highlighter-rouge">&lt;body&gt;</code>) to prevent overlap with other elements.</p>
 
 <p>Also note that <strong><code class="highlighter-rouge">.sticky-top</code> uses <code class="highlighter-rouge">position: sticky</code>, which <a href="https://caniuse.com/#feat=css-sticky" target="_blank" rel="nofollow">isn’t fully supported in every browser</a></strong>.</p>
 
