--- a/docs/1.0/components/pagination.html
+++ b/docs/1.0/components/pagination.html
@@ -939,7 +939,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <h2 id="alignment">Alignment</h2>
 
-<p>Change the alignment of pagination components with <a href="/docs/1.0/utilities/flex/">flexbox utilities</a>.</p>
+<p>Change the alignment of pagination components with <a href="{https://getbootstrap.com/docs/4.4/utilities/flex/" target="_blank" rel="nofollow">flexbox utilities</a>.</p>
 
 <div class="bd-example" data-example-id="">
 <nav aria-label="Page navigation example">
