refactor(update): broken links docs

--- a/docs/1.0/components/navbar.html
+++ b/docs/1.0/components/navbar.html
@@ -1112,7 +1112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p>Theming the navbar has never been easier thanks to the combination of theming classes and <code class="highlighter-rouge">background-color</code> utilities. Choose from <code class="highlighter-rouge">.navbar-light</code> for use with light background colors, or <code class="highlighter-rouge">.navbar-dark</code> for dark background colors. Then, customize with <code class="highlighter-rouge">.bg-*</code> utilities.</p>
 
-<div class="bd-example" style="background:url('../../../assets/img/project14.jpg'); background-size:cover;">
+<div class="bd-example" style="background:url('../../../assets/img/bg1.jpg'); background-size:cover;">
 
   <nav class="navbar navbar-expand-lg bg-primary">
     <div class="container">
